// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change its style on outline 1`] = `
<Button
  disabled={false}
  href="#"
  inset={false}
  onClick={null}
  outline={true}
  secondary={false}
>
  <styled.a
    disabled={false}
    href="#"
    inset={false}
    outline={true}
    secondary={false}
    theme={
      Object {
        "animation": [Function],
        "color": Object {
          "black": "#222222",
          "darkBlue": "#002C5F",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#00528F",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".1rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-dnqmqq",
            "isStatic": false,
            "lastClassName": "haYniX",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": [Function],
              "color": Object {
                "black": "#222222",
                "darkBlue": "#002C5F",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#00528F",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".1rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.a",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-dnqmqq",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      inset={false}
      outline={true}
      secondary={false}
      theme={
        Object {
          "animation": [Function],
          "color": Object {
            "black": "#222222",
            "darkBlue": "#002C5F",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#00528F",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".1rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
    >
      <a
        className="sc-dnqmqq haYniX"
        disabled={false}
        href="#"
      >
        <Text
          align="center"
          isLabel={false}
          primary={true}
          secondary={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          white={false}
        >
          <styled.p
            align="center"
            isLabel={false}
            primary={true}
            secondary={false}
            small={false}
            strong={false}
            theme={
              Object {
                "animation": [Function],
                "color": Object {
                  "black": "#222222",
                  "darkBlue": "#002C5F",
                  "darkGray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightGray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#00528F",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".1rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "maxWidth": "1280px",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={false}
          >
            <StyledComponent
              align="center"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "ldduuK",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "animation": [Function],
                      "color": Object {
                        "black": "#222222",
                        "darkBlue": "#002C5F",
                        "darkGray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightGray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#00528F",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".1rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "maxWidth": "1280px",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              primary={true}
              secondary={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "animation": [Function],
                  "color": Object {
                    "black": "#222222",
                    "darkBlue": "#002C5F",
                    "darkGray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightGray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#00528F",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".1rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "maxWidth": "1280px",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={false}
            >
              <p
                className="sc-bdVaJa ldduuK"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </a>
    </StyledComponent>
  </styled.a>
</Button>
`;

exports[`should change its style on success 1`] = `
<Button
  disabled={false}
  href="#"
  inset={false}
  onClick={null}
  outline={false}
  secondary={false}
  success={true}
>
  <styled.a
    disabled={false}
    href="#"
    inset={false}
    outline={false}
    secondary={false}
    success={true}
    theme={
      Object {
        "animation": [Function],
        "color": Object {
          "black": "#222222",
          "darkBlue": "#002C5F",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#00528F",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".1rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-dnqmqq",
            "isStatic": false,
            "lastClassName": "gujgQE",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": [Function],
              "color": Object {
                "black": "#222222",
                "darkBlue": "#002C5F",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#00528F",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".1rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.a",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-dnqmqq",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      inset={false}
      outline={false}
      secondary={false}
      success={true}
      theme={
        Object {
          "animation": [Function],
          "color": Object {
            "black": "#222222",
            "darkBlue": "#002C5F",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#00528F",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".1rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
    >
      <a
        className="sc-dnqmqq gujgQE"
        disabled={false}
        href="#"
      >
        <Text
          align="center"
          isLabel={false}
          primary={false}
          secondary={false}
          small={false}
          strong={false}
          success={true}
          transform="none"
          type=""
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            primary={false}
            secondary={false}
            small={false}
            strong={false}
            success={true}
            theme={
              Object {
                "animation": [Function],
                "color": Object {
                  "black": "#222222",
                  "darkBlue": "#002C5F",
                  "darkGray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightGray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#00528F",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".1rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "maxWidth": "1280px",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "lshFh",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "animation": [Function],
                      "color": Object {
                        "black": "#222222",
                        "darkBlue": "#002C5F",
                        "darkGray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightGray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#00528F",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".1rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "maxWidth": "1280px",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              primary={false}
              secondary={false}
              small={false}
              strong={false}
              success={true}
              theme={
                Object {
                  "animation": [Function],
                  "color": Object {
                    "black": "#222222",
                    "darkBlue": "#002C5F",
                    "darkGray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightGray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#00528F",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".1rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "maxWidth": "1280px",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={true}
            >
              <p
                className="sc-bdVaJa lshFh"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </a>
    </StyledComponent>
  </styled.a>
</Button>
`;

exports[`should change its style on warn 1`] = `
<Button
  disabled={false}
  href="#"
  inset={false}
  onClick={null}
  outline={false}
  secondary={false}
  warn={true}
>
  <styled.a
    disabled={false}
    href="#"
    inset={false}
    outline={false}
    secondary={false}
    theme={
      Object {
        "animation": [Function],
        "color": Object {
          "black": "#222222",
          "darkBlue": "#002C5F",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#00528F",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".1rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    warn={true}
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-dnqmqq",
            "isStatic": false,
            "lastClassName": "iqvMDC",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": [Function],
              "color": Object {
                "black": "#222222",
                "darkBlue": "#002C5F",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#00528F",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".1rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.a",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-dnqmqq",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      inset={false}
      outline={false}
      secondary={false}
      theme={
        Object {
          "animation": [Function],
          "color": Object {
            "black": "#222222",
            "darkBlue": "#002C5F",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#00528F",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".1rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
      warn={true}
    >
      <a
        className="sc-dnqmqq iqvMDC"
        disabled={false}
        href="#"
      >
        <Text
          align="center"
          isLabel={false}
          primary={false}
          secondary={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          warn={true}
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            primary={false}
            secondary={false}
            small={false}
            strong={false}
            theme={
              Object {
                "animation": [Function],
                "color": Object {
                  "black": "#222222",
                  "darkBlue": "#002C5F",
                  "darkGray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightGray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#00528F",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".1rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "maxWidth": "1280px",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            warn={true}
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "iHBHUH",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "animation": [Function],
                      "color": Object {
                        "black": "#222222",
                        "darkBlue": "#002C5F",
                        "darkGray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightGray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#00528F",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".1rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "maxWidth": "1280px",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              primary={false}
              secondary={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "animation": [Function],
                  "color": Object {
                    "black": "#222222",
                    "darkBlue": "#002C5F",
                    "darkGray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightGray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#00528F",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".1rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "maxWidth": "1280px",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              warn={true}
              white={true}
            >
              <p
                className="sc-bdVaJa iHBHUH"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </a>
    </StyledComponent>
  </styled.a>
</Button>
`;

exports[`should render a anchor 1`] = `
<Button
  disabled={false}
  href="#"
  inset={false}
  onClick={null}
  outline={false}
  secondary={false}
>
  <styled.a
    disabled={false}
    href="#"
    inset={false}
    outline={false}
    secondary={false}
    theme={
      Object {
        "animation": [Function],
        "color": Object {
          "black": "#222222",
          "darkBlue": "#002C5F",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#00528F",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".1rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-dnqmqq",
            "isStatic": false,
            "lastClassName": "dyrtEs",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": [Function],
              "color": Object {
                "black": "#222222",
                "darkBlue": "#002C5F",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#00528F",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".1rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.a",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-dnqmqq",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      inset={false}
      outline={false}
      secondary={false}
      theme={
        Object {
          "animation": [Function],
          "color": Object {
            "black": "#222222",
            "darkBlue": "#002C5F",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#00528F",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".1rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
    >
      <a
        className="sc-dnqmqq dyrtEs"
        disabled={false}
        href="#"
      >
        <Text
          align="center"
          isLabel={false}
          primary={false}
          secondary={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            primary={false}
            secondary={false}
            small={false}
            strong={false}
            theme={
              Object {
                "animation": [Function],
                "color": Object {
                  "black": "#222222",
                  "darkBlue": "#002C5F",
                  "darkGray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightGray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#00528F",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".1rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "maxWidth": "1280px",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "kZSZPt",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "animation": [Function],
                      "color": Object {
                        "black": "#222222",
                        "darkBlue": "#002C5F",
                        "darkGray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightGray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#00528F",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".1rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "maxWidth": "1280px",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              primary={false}
              secondary={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "animation": [Function],
                  "color": Object {
                    "black": "#222222",
                    "darkBlue": "#002C5F",
                    "darkGray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightGray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#00528F",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".1rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "maxWidth": "1280px",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={true}
            >
              <p
                className="sc-bdVaJa kZSZPt"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </a>
    </StyledComponent>
  </styled.a>
</Button>
`;

exports[`should render a button 1`] = `
<Button
  disabled={false}
  href={null}
  inset={false}
  onClick={[Function]}
  outline={false}
  secondary={false}
>
  <styled.button
    disabled={false}
    inset={false}
    onClick={[Function]}
    outline={false}
    secondary={false}
    theme={
      Object {
        "animation": [Function],
        "color": Object {
          "black": "#222222",
          "darkBlue": "#002C5F",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#00528F",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".1rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-htoDjs",
            "isStatic": false,
            "lastClassName": "ibENCC",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": [Function],
              "color": Object {
                "black": "#222222",
                "darkBlue": "#002C5F",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#00528F",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".1rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.button",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-htoDjs",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inset={false}
      onClick={[Function]}
      outline={false}
      secondary={false}
      theme={
        Object {
          "animation": [Function],
          "color": Object {
            "black": "#222222",
            "darkBlue": "#002C5F",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#00528F",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".1rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
    >
      <button
        className="sc-htoDjs ibENCC"
        disabled={false}
        onClick={[Function]}
      >
        <Text
          align="center"
          isLabel={false}
          primary={false}
          secondary={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            primary={false}
            secondary={false}
            small={false}
            strong={false}
            theme={
              Object {
                "animation": [Function],
                "color": Object {
                  "black": "#222222",
                  "darkBlue": "#002C5F",
                  "darkGray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightGray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#00528F",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".1rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "maxWidth": "1280px",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "kZSZPt",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "animation": [Function],
                      "color": Object {
                        "black": "#222222",
                        "darkBlue": "#002C5F",
                        "darkGray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightGray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#00528F",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".1rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "maxWidth": "1280px",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              primary={false}
              secondary={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "animation": [Function],
                  "color": Object {
                    "black": "#222222",
                    "darkBlue": "#002C5F",
                    "darkGray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightGray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#00528F",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".1rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "maxWidth": "1280px",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={true}
            >
              <p
                className="sc-bdVaJa kZSZPt"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </button>
    </StyledComponent>
  </styled.button>
</Button>
`;
